Fixed weird spacing around the page.

--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
 * {
-    border: 1px solid red;
+    border: 0px solid rgb(150, 149, 149);
     font-family: 'Roboto', sans-serif;
     color: white;
 }
 
 body {
     background-color: lightgray;
+    margin: 0;
+    padding: 0;
 }
 
 .navbar {
     background-color: #1F2937;
     display: flex;
     flex: 1;
+    margin-left: 5%;
 }
 
 .navbar-logo {
@@ -19,13 +22,11 @@ body {
     flex: 1;
     color: #F9FAF8;
     font-size: 24px;
-    text-align: center;     
 }
 
 .navbar-links {
     display: flex;
     flex: 1;
-    text-align: center;     
 }
 
 .linktext {
@@ -33,6 +34,8 @@ body {
     flex: 1;
     color: #E5E7EB;
     font-size: 18px;
+    align-self: center;
+    color: yellow;
 }
 
 .herotext {
